--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ h2{font-size: 40px;color: #000;  font-weight: 700;padding: 90px 0; text-align: c
   #container>.content1>.list>ul>li:nth-of-type(4)>a>span{display: block; background: url(../images/icon_mc01_04.png) no-repeat 0 0;width: 50px;height: 54px;margin: 30px auto 15px;}
   #container>.content1>.list>ul>li:nth-of-type(5)>a>span{display: block; background: url(../images/icon_mc01_05.png) no-repeat 0 0;width: 50px;height: 54px;margin: 30px auto 15px;} */ */
   
-  .content1 li .on 
+
   .list>ul>li.on{background: hsl(202deg 92% 70%);color: #fff;}
   #container>.content1>.list>ul>li.on>a{border:1px solid #ffffff00; color: #fff;}
   #container>.content1>.list>ul>li.on>a>span{background-position-y: -54px;} 
@@ -455,7 +455,7 @@ border-radius: 10%;background-color: #fff;box-shadow: 10px 10px 20px #dcdcdc;}
 
 #container>.content1>.list{position: absolute;z-index: 10; top: 11%;}
 #container>.content1>.list>ul{display: flex;flex-flow: row wrap;width: 630px;}
-#container>.content1>.list>ul>li{width: 140px;height: 130px; text-align: center;justify-content: row; border-radius: 20px;
+#container>.content1>.list>ul>li{width: 140px;height: 130px; text-align: center;justify-content: center; border-radius: 20px;
 box-shadow: 10px 10px 10px #ddd;;margin: 20px 15px;}
 #container>.content1>.list>ul>li>a{font-size: 18px;color: #000;text-align: center;}
 
@@ -773,7 +773,7 @@ border-radius: 10%;background-color: #fff;box-shadow: 10px 10px 20px #dcdcdc;}
 
 #container>.content1>.list{position: absolute;z-index: 10; top: 11%;}
 #container>.content1>.list>ul{display: flex;flex-flow: row wrap;width: 630px;}
-#container>.content1>.list>ul>li{width: 140px;height: 130px; text-align: center;justify-content: row; border-radius: 20px;
+#container>.content1>.list>ul>li{width: 140px;height: 130px; text-align: center;justify-content: center; border-radius: 20px;
 box-shadow: 10px 10px 10px #ddd;;margin: 20px 15px;}
 #container>.content1>.list>ul>li>a{font-size: 18px;color: #000;text-align: center;}
 
@@ -1087,7 +1087,7 @@ border-radius: 10%;background-color: #fff;box-shadow: 10px 10px 20px #dcdcdc;}
 
 #container>.content1>.list{position: absolute;z-index: 10; top: 15%;}
 #container>.content1>.list>ul{display: flex;flex-flow: row wrap;width: 630px;}
-#container>.content1>.list>ul>li{width: 140px;height: 130px; text-align: center;justify-content: row; border-radius: 20px;
+#container>.content1>.list>ul>li{width: 140px;height: 130px; text-align: center;justify-content: center; border-radius: 20px;
 box-shadow: 10px 10px 10px #ddd;;margin: 20px 15px;}
 #container>.content1>.list>ul>li>a{font-size: 18px;color: #000;text-align: center;}
 
@@ -1153,7 +1153,7 @@ text-indent: -9999px;overflow: hidden;background:#fff url(../images/icon-btn.png
 .content2>div>div:nth-of-type(2)>.plus{position: absolute;left: 40px;top: 140px; width: 30px;height: 30px;border-radius: 20px;
 text-indent: -9999px;overflow: hidden;background:#fff url(../images/icon-btn.png) no-repeat  0 0;background-position: -294px 5px;} */
 
-.content2>div:nth-of-type(3){}
+
 .content2>div>div:nth-of-type(3)>ul{display: flex;flex-direction: column; border-radius: 10px; box-shadow: 10px 10px 10px #ddd; }
 .content2>div>div:nth-of-type(3)>ul>li:first-child{width: 30vw;height: 19vh}
 .content2>div>div:nth-of-type(3)>ul>li>a{position: relative; display: inline-block; font-size: 20px;color: #000;font-weight: 700;line-height: 30px;padding: 40px;}
@@ -1407,7 +1407,7 @@ border-radius: 10%;background-color: #fff;box-shadow: 10px 10px 20px #dcdcdc;}
 
 
 #container>.content1>.list>ul{display: flex;flex-flow: row wrap;width: 630px;}
-#container>.content1>.list>ul>li{width: 180px;height: 160px; text-align: center;justify-content: row; border-radius: 20px;
+#container>.content1>.list>ul>li{width: 180px;height: 160px; text-align: center;justify-content: center; border-radius: 20px;
 box-shadow: 10px 10px 10px #ddd;;margin: 20px 15px;}
 #container>.content1>.list>ul>li>a{font-size: 18px;color: #000;text-align: center;}
 
