--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,7 @@
   #footer>.footer_inner>.footer_inner2{display: flex; flex-direction: column;text-align: center;box-sizing: border-box;}
   #footer>.footer_inner>.footer_inner2>span{display: inline-block; background: url(../images/flogo.png)no-repeat 0 0 / 110px;width: 166px;height: 33px;text-indent: -9999px;overflow: hidden;}
   #footer>.footer_inner>.footer_inner2>address{color: #666;text-align: justify;;padding-bottom: 20px;font-size: 11px;line-height: 1.5;}
-  #footer>.footer_inner>p{color: #777;padding-bottom: 20px;font-size: 11px;}
+  #footer>.footer_inner>p{color: #A1A1A1;padding-bottom: 20px;font-size: 11px;}
  
 }
 
@@ -22,7 +22,7 @@
   #footer>.footer_inner>.footer_inner2{display: flex; flex-direction: column;text-align: center;box-sizing: border-box;}
   #footer>.footer_inner>.footer_inner2>span{display: inline-block; background: url(../images/flogo.png)no-repeat 0 0 / 110px;width: 166px;height: 33px;text-indent: -9999px;overflow: hidden;}
   #footer>.footer_inner>.footer_inner2>address{color: #666;text-align: justify;;padding-bottom: 20px;font-size: 11px;line-height: 1.5;}
-  #footer>.footer_inner>p{color: #777;padding-bottom: 20px;font-size: 11px;}
+  #footer>.footer_inner>p{color: #A1A1A1;padding-bottom: 20px;font-size: 11px;}
 }
 
 @media screen and (min-width:1024px) and (max-width:1280px) {
@@ -35,7 +35,7 @@
   #footer>.footer_inner>.footer_inner2{display: flex; flex-direction: row;text-align: center;box-sizing: border-box;}
   #footer>.footer_inner>.footer_inner2>span{display: inline-block; background: url(../images/flogo.png)no-repeat 0 0 / 155px;width: 166px;height: 33px;text-indent: -9999px;overflow: hidden;}
   #footer>.footer_inner>.footer_inner2>address{color: #666;text-align: justify;;padding-left: 20px; padding-bottom: 20px;font-size: 13px;line-height: 1.7;}
-  #footer>.footer_inner>p{color: #777;padding-left: 185px; padding-bottom: 20px;font-size: 11px;}
+  #footer>.footer_inner>p{color: #A1A1A1;padding-left: 185px; padding-bottom: 20px;font-size: 11px;}
 }
 
 @media screen and (min-width:1281px) and (max-width:1440px){
@@ -49,7 +49,7 @@
   #footer>.footer_inner>.footer_inner2{display: flex; flex-direction: row;text-align: center;box-sizing: border-box;}
   #footer>.footer_inner>.footer_inner2>span{display: inline-block; background: url(../images/flogo.png)no-repeat 0 0 / 180px;width: 180px;height: 33px;text-indent: -9999px;overflow: hidden;}
   #footer>.footer_inner>.footer_inner2>address{color: #666;text-align: justify;;padding-left: 40px; padding-bottom: 20px;font-size: 13px;line-height: 1.7;}
-  #footer>.footer_inner>p{color: #777;padding-left: 215px; padding-bottom: 20px;font-size: 12px;}
+  #footer>.footer_inner>p{color: #A1A1A1;padding-left: 215px; padding-bottom: 20px;font-size: 12px;}
 }
 
 @media screen and (min-width:1441px){
@@ -63,5 +63,5 @@
   #footer>.footer_inner>.footer_inner2{display: flex; flex-direction: row;text-align: center;box-sizing: border-box;}
   #footer>.footer_inner>.footer_inner2>span{display: inline-block; background: url(../images/flogo.png)no-repeat 0 0;margin-left: 200px; width: 166px;height: 33px;text-indent: -9999px;overflow: hidden;}
   #footer>.footer_inner>.footer_inner2>address{color: #666;text-align: justify;;padding-bottom: 20px;padding-left: 30px;}
-  #footer>.footer_inner>p{color: #777;padding-bottom: 20px;padding-left: 400px;}
+  #footer>.footer_inner>p{color: #A1A1A1;padding-bottom: 20px;padding-left: 400px;}
 }
