--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,9 @@ h2{font-size: 40px;color: #000;  font-weight: 700;padding: 90px 0; text-align: c
   transform: translateY(8px);animation: ani3 5s ease-in-out 0.5s  infinite;}
   .loding>ul>li:nth-child(3)>ul{display: flex;flex-direction: row;}
   .loding>ul>li:nth-child(3)>ul>li:nth-child(2){display: none;}
-  
+  .loding>ul>li:nth-child(3)>ul>li a{text-indent: -9999px}
+  .loding>ul>li:nth-child(3)>ul>li a i{}
+
   @keyframes ani3 {
   0%{width: 5px;}
   100%{width: 116px;}
@@ -275,7 +277,7 @@ h2{font-size: 40px;color: #000;  font-weight: 700;padding: 90px 0; text-align: c
   
   .content3>div>div:first-of-type>ul>li:first-child{font-size: 0.8rem;font-weight: 600;text-align: center;}
   .content3>div>div:first-of-type>ul>li:nth-child(2){font-size: 1.8rem;font-weight: bold;line-height: 1.5;text-align: center;}
-  .content3>div>div:first-of-type>ul>li:last-child{font-size: 0.6rem;font-weight: 400;color: #038bd3;text-align: center;}
+  .content3>div>div:first-of-type>ul>li:last-child{font-size: 0.6rem;font-weight: 400;color: #035E8C;text-align: center;}
   
   .content3>div>div>p>img{position: absolute;right: 45px;top: 130px; width: 65vw;height: 13vh;}
   
@@ -594,7 +596,7 @@ text-indent: -9999px;overflow: hidden;background:#eee url(../images/icon-btn.png
 
 .content3>div>div:first-of-type>ul>li:first-child{font-size: 1rem;font-weight: 600;text-align: center;line-height: 1.5;}
 .content3>div>div:first-of-type>ul>li:nth-child(2){font-size: 2rem;font-weight: bold;line-height: 1.5;text-align: center;}
-.content3>div>div:first-of-type>ul>li:last-child{font-size: 1rem;font-weight: 400;color: #038bd3;text-align: center;}
+.content3>div>div:first-of-type>ul>li:last-child{font-size: 1rem;font-weight: 400;color: #035E8C;text-align: center;}
 
 .content3>div>div>p>img{position: absolute;right: 50px;top: 30px; width: 55vw;height: 15vh;}
 
@@ -912,7 +914,7 @@ text-indent: -9999px;overflow: hidden;background:#eee url(../images/icon-btn.png
 
 .content3>div>div:first-of-type>ul>li:first-child{font-size: 1rem;font-weight: 600;text-align: center;line-height: 1.5;}
 .content3>div>div:first-of-type>ul>li:nth-child(2){font-size: 2rem;font-weight: bold;line-height: 1.5;text-align: center;}
-.content3>div>div:first-of-type>ul>li:last-child{font-size: 1rem;font-weight: 400;color: #038bd3;text-align: center;}
+.content3>div>div:first-of-type>ul>li:last-child{font-size: 1rem;font-weight: 400;color: #035E8C;text-align: center;}
 
 .content3>div>div>p>img{position: absolute;right: 10px;top: 40px; width: 22vw;height: 13vh;}
 
@@ -1230,7 +1232,7 @@ text-indent: -9999px;overflow: hidden;background:#eee url(../images/icon-btn.png
 
 .content3>div>div:first-of-type>ul>li:first-child{font-size: 1rem;font-weight: 600;text-align: center;}
 .content3>div>div:first-of-type>ul>li:nth-child(2){font-size: 2rem;font-weight: bold;}
-.content3>div>div:first-of-type>ul>li:last-child{font-size: 1rem;font-weight: 400;color: #038bd3;text-align: center;}
+.content3>div>div:first-of-type>ul>li:last-child{font-size: 1rem;font-weight: 400;color: #035E8C;text-align: center;}
 
 .content3>div>div>p>img{position: absolute;right: 10px;width: 60%;top: 35px;}
 
@@ -1551,7 +1553,7 @@ text-indent: -9999px;overflow: hidden;background:#ddd url(../images/icon-btn.png
 
 .content3>div>div:first-of-type>ul>li:first-child{font-size: 16px;font-weight: 600;text-align: center;}
 .content3>div>div:first-of-type>ul>li:nth-child(2){font-size: 46px;font-weight: bold;}
-.content3>div>div:first-of-type>ul>li:last-child{font-size: 15px;font-weight: 400;color: #038bd3;text-align: center;}
+.content3>div>div:first-of-type>ul>li:last-child{font-size: 15px;font-weight: 400;color: #035E8C;text-align: center;}
 
 .content3>div>div>p>img{position: absolute;right: 10px;width: 420px;top: 35px;}
 
